Timer has been added. Question visibility was corrected (Coding question)

--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -13,45 +13,46 @@ header,
     background-size: cover;
 }
 
+
 * {
     box-sizing: border-box;
 }
-  
-  
+
+
 .container {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-  
-  
+
+
 .first-column {
     width: 66%;
     padding: 0 10px 0 0;
     float: left;
 }
-  
+
 .second-column {
     width: 33%;
     padding: 0 10px 0 0;
     float: right;
 }
-  
+
 @media only screen and (max-width: 800px) {
-  
+
     .first-column {
         width: 100%;
         padding-bottom: 10px;
         float: none;
     }
-  
+
     .second-column {
         width: 100%;
         padding-bottom: 10px;
         float: none;
     }
 }
-  
+
   /*footer { */
   /*            width: 100%; */
   /*            bottom: 0px; */
@@ -64,11 +65,11 @@ header,
   /*            font-size:30px; */
   /*            font-weight:bold; */
   /*        } */
-  
-  
-  
+
+
+
   //
-  
+
   /* Create two equal columns that floats next to each other */
 .column {
     float: left;
@@ -76,28 +77,33 @@ header,
     padding: 10px;
     height: 300px; /* Should be removed. Only for demonstration */
 }
-  
+
   /* Clear floats after the columns */
 .row:after {
     content: "";
     display: table;
     clear: both;
 }
-  
+
 #frontImage{
     padding-left : 50px;
     width : 500px;
 }
-  
+
 .short-heading{
     font-size:50px;
     margin-left:60px;
     margin-top : 60px;
 }
-  
+
 .landing-login{
     font-size:30px;
     margin-left:60px;
     margin-top : 80px;
     padding-left: 50px;
+}
+
+#remtime{
+  position: fixed;
+  margin-left: 70%;
 }
